--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>11</java.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
+		<log4j2.version>2.16.0</log4j2.version>
 	</properties>
 
 	<dependencyManagement>
